--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,5 +8,6 @@
     <link rel="apple-touch-icon" href="/images/pwa-icon-ios.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#1a2c75"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <title><%= title %> </title>
 </head>
