--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,12 +4,12 @@
     <div class="container">
     <form class="align-middle" action="/login" method="POST">
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
+            <input type="email" class="form-control" id="floatingInput" name="useremail" placeholder="name@example.com" required>
+            <label for="useremail">Email address</label>
           </div>
           <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Password</label>
+            <input type="password" class="form-control" name="userpassword" id="floatingPassword" placeholder="Password" required>
+            <label for="userpassword">Password</label>
           </div>
         <button type="submit" class="btn btn-primary">Log In</button>
       </form>
