--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <link rel="manifest" href="/js/pwa.webmanifest">
-    <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/pwa.js"></script>
     <script src="/js/status.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="/images/pwa-icon-ios.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#1a2c75"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title><%= title %> </title>
 </head>
