--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,5 +92,11 @@ html {
     margin-left: 4px;
     margin-top: 4.6em;
 }
-
+#userName {
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0;
+    font-family: garamond;
+}
  
