--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -11,23 +11,14 @@
           <label class="btn btn-primary">
             <i class="fa fa-image"></i> Change Profile Pic<input type="file" style="display: none;"  name="pfp" accept="image/*" id="pfpFile" >
           </label>
-          <!-- <div class="ui vertical animated button" tabindex="0">
-            <div class="hidden content">Shop</div>
-            <div class="visible content">
-              <input type="submit" value="upload" >
-              <i class="upload icon"></i> 
-            </div> -->
-            <!-- <input type="submit" value="upload" class="ui button"> -->
-          <!-- </div> -->
         </form>
-        <!-- <a href="">change profile pic</a> -->
       </div>
       
     </div>
     
   </div>
   <div class="container">
-    <form class="align-middle" action="/app/users/<%= user.id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
+    <form class="align-middle" action="/app/users/<%= user.id %>?_method=PATCH" method="POST"id="updateProfile" >
         <div class="form-floating mb-3 ">
             <input type="text" class="form-control"  name="name" placeholder="FullName" required>
             <label for="name">Name</label>
@@ -37,14 +28,19 @@
             <label for="email">Email address</label>
           </div>
           <div class="form-floating" style = "margin-bottom:20px">
-            <input type="password" class="form-control <%= check %> "  name="userpassword" placeholder="Password" required>
-          <% if (check === 'is-invalid') { %>
-            <div class="invalid-feedback">The Correct Password Is Required To Update Profile</div>
-          <% } %>
+            <input id="password" type="password" class="form-control  "  name="userpassword" placeholder="Password" required>
+         
+            <div class="invalid-feedback" id="message" style="display: none;">The Correct Password Is Required To Update Profile</div>
+         
             <label for="userpassword">Password</label>
           </div>
           
-        <button type="submit" class="btn btn-secondary">Update</button>
+       
+       <div style="display: flex;justify-content: space-between;">
+        <button type="submit" class="btn btn-success" id="updateButton" name="<%= user.id %>">Update Profile</button>
+        <input type="submit" value="Delete Profile" class="btn btn-danger" name="<%= user.id %>" id = "deleteButton" formnovalidate>
+       </div>
+        
       </form>
     </div>
    
