--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -97,11 +97,11 @@
                     </div>
                     <div class="modal-body" >
                       <img src="" alt="" id="postImg" name="img" class="ui medium rounded image" style="display: none;">
-                      <video controls="" autoplay="0" name="video" class="ui medium rounded image" id="postVid" style="display: none;">
+                      <video controls="" name="video" class="ui medium rounded image" id="postVid" style="display: none;">
                         <source src="" type="video/mp4" id="videPlay">
                       </video>
                       <div class="ui medium rounded image" name="text" style="height: 150px;display: none;" id="parentText">
-                        <p id="postText"></p>
+                        <p id="postText" style="font-size: x-large;font-family: cursive;" ></p>
                       </div>
 
                     </div>
