--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,10 @@
 <%- include('./partials/header.ejs') %>
 
-<body id="login">
+<body id="login" style="border: 1px solid #ffffff;border-radius: 15px;margin: 2px;">
+  <div  class="container" style="display: flex;flex-direction: column;align-items: center;">
+    <h1 style="color: white;margin: 0;margin-top: 5px;font-family: cursive;">MarcyGram</h1>
+    <img src="https://i.ibb.co/stRRjjw/marcyicon-1.png" alt="marcyicon-1" width="300" height="300">
+  </div>
     <div class="container">
     <form class="align-middle" action="/signup" method="POST" enctype="multipart/form-data">
         <div class="form-floating mb-3">
@@ -19,7 +23,10 @@
             <label for="formFile" class="form-label">Profile Picture</label>
             <input class="form-control" type="file" name="formFile"  accept="image/*">
           </div>
-        <button type="submit" class="btn btn-secondary">Sign Up</button>
+        <button type="submit" class = "ui inverted blue button cc_pointer fluid">Sign Up</button>
+      </form>
+      <form action="/login" method="GET" style="margin-top: 10px;">
+        <button type="submit"  class="ui inverted teal button cc_pointer fluid">Login</button>
       </form>
     </div>
 </body> 
