--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,12 @@
 #login {
     margin: 10px;
+    align-items: center;
 }
+#loginLogo{
+    align-items: center;
+
+}
+
 #home {
     margin: 5px;
 }
