--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,7 +34,9 @@
             <div class="content">
               <span class="right floated" >
                 <i class="heart outline like icon"></i>
-                <%= element.likes_count %> likes
+                <span id="<%= element.likes_count %>">
+                  <%= element.likes_count %> likes
+                </span>
               </span>
               <i class="comment icon" id="commentIcon"></i>
               <a>
@@ -119,14 +121,14 @@
 <!-- comments Modal -->
 <div class="modal fade" id="commentModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content">
+    <div class="modal-content" style="background: black;color: white;">
       <div class="modal-header">
         <h5 class="modal-title" id="staticBackdropLabel">Comments</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer" style="justify-content: center;">
         <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
