--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <script src="/js/pwa.js"></script>
     <script src="/js/status.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <link rel="apple-touch-icon" href="/images/pwa-icon-ios.png">
+    <link rel="apple-touch-icon" href="/images/ios.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#1a2c75"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
