--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -28,13 +28,13 @@
       <% posts.forEach(element => { %>
         <% if (element.post_content) { %>
             <div title="text" class="wide column format" style="height: 150px;" id="<%= element.id %> "  data-bs-whatever="post">
-              <p style="font-size: x-large;font-family: cursive;"><%= element.post_content %> </p>
+              <p  title="text" style="font-size: x-large;font-family: cursive;"><%= element.post_content %> </p>
             </div>
          <% } else { %>
                 <% if (element.file_type.includes('image')) { %>
-                  <img title="image" class="ui small rounded image" src="<%= element.post_src %>" alt="imgPost" style="padding: 2px;background: white;" id="<%= element.id %> " data-bs-whatever="post"/>
+                  <img title="image" class="ui small rounded image" src="<%= element.post_src %>" alt="imgPost" style="padding: 2px;background: white;height: 150px;width: 150px;" id="<%= element.id %> " data-bs-whatever="post"/>
                  <% } else { %>
-                    <video title="video" controls="" name="media" class="videoGrid" id="<%= element.id %> " data-bs-whatever="post">
+                    <video title="video" controls="" name="media" class="videoGrid" id="<%= element.id %> " data-bs-whatever="post" style="border-radius: 5px;" src="<%= element.post_src %>">
                       <source src="<%= element.post_src %>" type=<%= element.file_type %>>
                     </video>
                 <% } %>
