added login auth

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
     <img src="https://i.ibb.co/stRRjjw/marcyicon-1.png" alt="" width="300" height="300">
   </div>
     <div class="container">
-    <form class="align-middle" action="/login" method="POST">
+    <form class="align-middle" action="/login" method="POST" id="loginForm">
         <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" name="useremail" placeholder="name@example.com" required>
             <label for="useremail">Email address</label>
