added timespan and like to post

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
       <% posts.forEach(element => { %>
             <div class="ui card fluid" style=" background: black;color: white; margin-bottom: 1.5em;">
             <div class="content">
-              <div class="right floated meta" style="color: white;">14h</div>
+              <div class="right floated meta" style="color: white;"><%= element.timeSpan %>hrs</div>
               <% if (element.file_src) { %>
                 <img class="ui avatar image" id="<%= element.id %>" src="<%= element.file_src %>"/> <%= element.name %> 
                <% } else { %>
@@ -123,7 +123,7 @@
 <!-- comments Modal -->
 <div class="modal fade" id="commentModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content" style="background: black;color: white;">
+    <div class="modal-content" style="background: black;color: white;border-radius: 20px;">
       <div class="modal-header">
         <h5 class="modal-title" id="staticBackdropLabel">Comments</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
